<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4.9"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/coral"
            android:gravity="center"
            android:text="@string/orange_text_view"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_green"
            android:gravity="center"
            android:text="@string/green_text_view"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bermuda"
            android:gravity="center"
            android:text="@string/blue_text_view"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:weightSum="3">

        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@color/bermuda"
            android:text="@string/a_button"
            android:textColor="@color/black">

        </android.widget.Button>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/cookie">

        </ImageButton>

        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@color/moss_green"
            android:text="@string/a_green_button"
            android:textColor="@color/black">

        </android.widget.Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:background="@color/dark_yellow"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_edit_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bermuda"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/notify_me"
                android:textSize="20sp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/auto_backup"
                android:textSize="20sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bermuda_gray" />

        <RatingBar
            style="@android:style/Widget.Holo.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/ruby"
            android:rating="4"
            android:stepSize="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bermuda_gray" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/yes"
                android:textSize="20sp">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/no"
                android:textSize="20sp">

            </RadioButton>
        </RadioGroup>
    </LinearLayout>


</LinearLayout>